--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -274,7 +274,7 @@
      <PerGameModeSettingsOfString/>
     </value>
    </setting>
-   <setting name="RepositoryUsernames" serializeAs="Xml">
+   <setting name="RepositoryApiKeys" serializeAs="Xml">
     <value>
      <KeyedSettingsOfString/>
     </value>
