--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -187,10 +187,14 @@
     <Compile Include="ModManagement\VirtualModInfo.cs" />
     <Compile Include="ModManagement\VirtualModLink.cs" />
     <Compile Include="ModRepositories\NexusModsApi\ApiCallManager.cs" />
-    <Compile Include="ModRepositories\NexusModsApi\ApiObjects\GameDataContract.cs" />
-    <Compile Include="ModRepositories\NexusModsApi\ApiObjects\Md5SearchDataContract.cs" />
-    <Compile Include="ModRepositories\NexusModsApi\ApiObjects\ModDataContract.cs" />
-    <Compile Include="ModRepositories\NexusModsApi\ApiObjects\UserDataContract.cs" />
+    <Compile Include="ModRepositories\NexusModsApi\DataContracts\ColourSchemeDataContract.cs" />
+    <Compile Include="ModRepositories\NexusModsApi\DataContracts\EndorsementDataContract.cs" />
+    <Compile Include="ModRepositories\NexusModsApi\DataContracts\GameDataContract.cs" />
+    <Compile Include="ModRepositories\NexusModsApi\DataContracts\Md5SearchDataContract.cs" />
+    <Compile Include="ModRepositories\NexusModsApi\DataContracts\ModDataContract.cs" />
+    <Compile Include="ModRepositories\NexusModsApi\DataContracts\ModFileDataContract.cs" />
+    <Compile Include="ModRepositories\NexusModsApi\DataContracts\ModFileDownloadInfoDataContract.cs" />
+    <Compile Include="ModRepositories\NexusModsApi\DataContracts\UserDataContract.cs" />
     <Compile Include="ModRepositories\NexusModsApi\NexusModsApiRepository.cs" />
     <Compile Include="ModRepositories\NexusModsApi\RateLimit.cs" />
     <Compile Include="ModRepositories\Nexus\NexusLinks.cs" />
@@ -702,6 +706,7 @@
       <HintPath>..\lib\ICSharpCode.TextEditor.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="ObjectListView, Version=2.8.0.20711, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\ObjectListView.dll</HintPath>
