--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -78,7 +78,7 @@
     </Compile>
     <Compile Include="GameModeSelector.cs" />
     <Compile Include="HeaderlessTextWriterTraceListener.cs" />
-    <Compile Include="AuthenticationFormTask.cs" />
+    <Compile Include="SSO\AuthenticationFormTask.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -239,7 +239,7 @@
       <DependentUpon>GameModeSelectionForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="AuthenticationForm.resx">
+    <EmbeddedResource Include="SSO\AuthenticationForm.resx">
       <DependentUpon>AuthenticationForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -321,6 +321,8 @@
       <DependentUpon>OsSettingsPage.cs</DependentUpon>
     </Compile>
     <Compile Include="Settings\UrlAssociationUtil.cs" />
+    <Compile Include="SSO\SsoManager.cs" />
+    <Compile Include="SSO\ApiKeyReceivedEventArgs.cs" />
     <Compile Include="TipsManagement\Balloon.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -475,6 +477,7 @@
     <Content Include="data\Third-Party Licenses\TxFileMAnager License.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="data\Third-Party Licenses\WebSocket-Sharp License.txt" />
     <Content Include="Resources\tes_logo.ico" />
     <None Include="Resources\update_warning_disabled.png" />
     <None Include="Resources\update_warning.png" />
@@ -581,13 +584,13 @@
     <Compile Include="UI\Controls\GameModeListViewItemBase.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="AuthenticationForm.cs">
+    <Compile Include="SSO\AuthenticationForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AuthenticationForm.Designer.cs">
+    <Compile Include="SSO\AuthenticationForm.Designer.cs">
       <DependentUpon>AuthenticationForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="AuthenticationFormViewModel.cs" />
+    <Compile Include="SSO\AuthenticationFormViewModel.cs" />
     <Compile Include="MessagerServer.cs" />
     <Compile Include="ModManagement\AddModTask.cs" />
     <Compile Include="ModManagement\AutoTagger.cs" />
@@ -741,6 +744,9 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq">
+    </Reference>
+    <Reference Include="websocket-sharp">
+      <HintPath>..\lib\websocket-sharp.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase">
     </Reference>
