Added MSBuild target to copy ScriptTypes to GameModes directory after build.

--- a/Support/AntlrBuildTask/AntlrBuildTask.csproj
+++ b/Support/AntlrBuildTask/AntlrBuildTask.csproj
@@ -23,12 +23,13 @@
     <SccProvider>
     </SccProvider>
     <TargetFrameworkProfile />
+    <IntermediatePath>..\..\Stage\obj\$(Configuration)</IntermediatePath>
+    <OutputPath>..\..\lib\Antlr\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\lib\Antlr\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -37,7 +38,6 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\lib\Antlr\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
