--- a/Game Modes/Oblivion/Oblivion.csproj
+++ b/Game Modes/Oblivion/Oblivion.csproj
@@ -47,7 +47,7 @@
     </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.XML" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\SharedAssemblyInformation.cs">
