--- a/Game Modes/SkyrimSE.XmlScript/SkyrimSE.XmlScript.csproj
+++ b/Game Modes/SkyrimSE.XmlScript/SkyrimSE.XmlScript.csproj
@@ -136,7 +136,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.XML" />
+    <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
