--- a/NexusClient/packages.config
+++ b/NexusClient/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net46" />
-  <package id="Pathoschild.FluentNexus" version="0.6.0" targetFramework="net46" />
+  <package id="Pathoschild.FluentNexus" version="0.7.0" targetFramework="net46" />
   <package id="Pathoschild.Http.FluentClient" version="3.3.0" targetFramework="net46" />
   <package id="Squid-Box.SevenZipSharp" version="1.1.144" targetFramework="net46" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net46" />
 </packages>
