--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -227,6 +227,9 @@
       <DependentUpon>OsSettingsPage.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="SSO\ManualApiKeyEntryForm.resx">
+      <DependentUpon>ManualApiKeyEntryForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TipsManagement\Balloon.resx" />
     <EmbeddedResource Include="TipsManagement\BalloonVM.resx" />
     <EmbeddedResource Include="TipsManagement\Hooks\WindowsHook.resx" />
@@ -325,6 +328,12 @@
     </Compile>
     <Compile Include="Settings\UrlAssociationUtil.cs" />
     <Compile Include="SSO\CancellationEventArgs.cs" />
+    <Compile Include="SSO\ManualApiKeyEntryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SSO\ManualApiKeyEntryForm.Designer.cs">
+      <DependentUpon>ManualApiKeyEntryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SSO\SsoManager.cs" />
     <Compile Include="SSO\ApiKeyReceivedEventArgs.cs" />
     <Compile Include="TipsManagement\Balloon.cs">
