fix some typos in chinese.ini

--- a/Setup/scripts/isxdl/chinese.ini
+++ b/Setup/scripts/isxdl/chinese.ini
@@ -12,14 +12,14 @@
 112=发送请求...
 113=获取 %1
 114=连接到 %1
-115=接受中...
+115=接收中...
 116=连接中 %1
 
 ; Error messages
 120=错误 无法连接到互联网.\n\n%1
 121=错误 打开 %1.\n\n 服务器返回状态码 %2.
 122=错误 读取链接 URL.\n\n%1
-123=错误 写文件 %1.\n\n%2
+123=错误 写入文件 %1.\n\n%2
 124=错误 打开文件 %1.\n\n%2
 125=错误 '%1' 无效链接 URL.
 126=错误 打开中 %1.\n\n%2
