Profile Switch fix
Fixed issues causing the profile switch to get stuck or profiles getting corrupt in the process.

--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -78,6 +78,7 @@
     </Compile>
     <Compile Include="GameModeSelector.cs" />
     <Compile Include="HeaderlessTextWriterTraceListener.cs" />
+    <Compile Include="ModManagement\ProfileSwitchSetupTask.cs" />
     <Compile Include="ModManagement\UI\EventArgs\ExportFailedEventArgs.cs" />
     <Compile Include="ModManagement\UI\EventArgs\ExportSucceededEventArgs.cs" />
     <Compile Include="ModRepositories\AuthenticationStatus.cs" />
